--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
 }
+
 body{
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -8,10 +9,12 @@ body{
     color: #f0f0f0;
     padding: 20px;
 }
+
 h1,h2{
     text-align: center;
     color: #00f7ff;
 }
+
 form{
     background: #2c2c3e;
     padding: 20px;
@@ -19,11 +22,13 @@ form{
     box-shadow: 0 0 15px rgba(0,255,255,0.2);
     margin-bottom: 40px;
 }
+
 label{
     font-weight: bold;
     display: block;
     margin-top: 15px;
 }
+
 input,textarea{
     width: 100%;
     padding: 10px;
@@ -34,10 +39,12 @@ input,textarea{
     background: #44445c;
     color: #fff;
 }
+
 textarea{
     resize: none;
     height: 100px;
 }
+
 button{
     margin-top: 20px;
     width: 100%;
@@ -50,13 +57,34 @@ button{
     cursor: pointer;
     font-weight: bold;
 }
+
 button:hover{
     background: #00cfd1;
 }
+
 .entrada{
     background:#2c2c3e;
     padding: 15px;
     border-radius: 10px;
     margin-bottom: 15px;
     box-shadow: 0 0 10px rgba(0,255,255,0.1);
+}
+
+.entrada h3{
+    margin-top: 0;
+    color: #00f7ff
+}
+
+.humor{
+    font-size: 1.1rem;
+    margin-top: 10px;
+}
+
+.emoji{
+    font-size: 1.5rem;
+    margin-left: 10px;
+}
+
+.historico{
+    margin-top: 40px;
 }
